--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@ finance_dashboard/cash-flow-statement/
 power_consumption/
 expenses.csv
 finance_dashboard/__pycache__
-finance_dashboard/.streamlit
+finance_dashboard/.streamlit/secrets.toml
+!requirements.txt
