--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ finance_dashboard/.streamlit/secrets.toml
 grocery_list/
 data_discovery/
 supply_chain/
+finance_dashboard/investment_dashboard.ipynb
